--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "semantic-release": "19.0.3"
     },
     "scripts": {
-        "postversion": "cp package.json bower.json"
+        "postversion": "cp package.json bower.json",
+        "semantic-release": "semantic-release"
     }
 }
