Chore(CI): Update Semantic Release permissions (CICD-1123)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,6 @@ jobs:
         run: npm run semantic-release
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   issues: write
